Fix width search on mobile

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -3,14 +3,18 @@
 .search {
   display: flex;
 
+  &__input-wrapper {
+    flex: 1 1 100%;
+  }
+
   &__input {
     border-bottom-left-radius: 50px;
     border-top-left-radius: 50px;
     border: 2px solid $black;
-    flex: 1 1 100%;
     font-size: 20px;
     height: 50px;
     padding: 0 20px;
+    width: 100%;
   }
 
   &__button {
